# flower-engine

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  config.yaml.example  persist.json  requirements.txt  setup.sh  start.sh
assets_example/: system_rules.yaml
assets_example/characters/: mercenary.yaml
assets_example/modules/: safety_protocol.yaml  system_interface.yaml  the_system.yaml
assets_example/rules/: gritty.yaml
assets_example/skills/: swordsmanship.yaml
assets_example/worlds/: cyberpunk.yaml
characters/: jax.yaml
docs/: AGENTS.md  GEMINI.md  ROADMAP.md
engine/: commands.py  config.py  database.py  handlers.py  llm.py  logger.py  main.py  prompt.py  rag.py  requirements.txt  state.py  test_client.py  utils.py
rules/: concise.md  grounded.yaml  narrator.md  tabletop.md
skills/: hacking.yaml  stealth.yaml  swordsmanship.yaml
src/: app.rs  main.rs  models.rs  ui.rs  ws.rs
tui/src/: app.rs  main.rs  models.rs  ws.rs
tui/src/ui/: chat.rs  checklist.rs  header.rs  input.rs  mod.rs  popup.rs  sidebar.rs
worlds/: cyberpunk.yaml
